--- a/report_sample_level.Rmd
+++ b/report_sample_level.Rmd
@@ -11,14 +11,17 @@ always_allow_html: true
 self_contained: true
 
 params:
-  argosDir : "~/Work/mutation_report_sample_level/data/argos/08390_R/1.1.2/20230208_22_12_784560"
+  analysis_dir : "~/Work/mutation_report_sample_level/data/argos/08390_R/1.1.2/20230208_22_12_784560/analysis/"
+  portal_dir : "~/Work/mutation_report_sample_level/data/argos/08390_R/1.1.2/20230208_22_12_784560/portal/"
   sampleID : "s_C_8XFJMJ_P001_d01"
-  geneAnnotation_path : dummy
 ---
 
 ```{r loadData, echo=FALSE, include=FALSE}
+
+
 source("load_data.R", local=knitr::knit_global())
-data=load_data(params$argosDir,params$sampleID)
+inputs <- list(analysis_dir = params$analysis_dir, portal_dir = params$portal_dir)
+data=load_data(params$sampleID, inputs)
 ```
 
 
