--- a/report/report_sample_level.Rmd
+++ b/report/report_sample_level.Rmd
@@ -13,6 +13,8 @@ self_contained: true
 params:
   analysis_dir : "~/Work/mutation_report_sample_level/data/argos/08390_R/1.1.2/20230208_22_12_784560/analysis/"
   portal_dir : "~/Work/mutation_report_sample_level/data/argos/08390_R/1.1.2/20230208_22_12_784560/portal/"
+  facets_dir : "~/Work/mutation_report_sample_level/data/argos/08390_R/1.1.2/20230208_22_12_784560/portal/"
+  maf_dir : "~/Work/mutation_report_sample_level/data/argos/08390_R/1.1.2/20230208_22_12_784560/portal/"
   sample_id : "s_C_8XFJMJ_P001_d01"
   oncokb_file: "dummy"
 ---
